# eyes-care-taker

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
caretaker_ui/: __init__.py  caretaker_ui.py
caretakers/: __init__.py  caretaker.py  time_moniter.py
docs/: CONTRIBUTING.md
