[tool.poetry]
name = "eyes-care-taker"
version = "0.1.0"
description = "Eyes care taker Application"
authors = ["Rajendra Kumar R Yadav"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colored = "^1.4.3"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
